# bdf

./: .gitmodules  .travis.yml  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  rust.yml
bdf-parser/: Cargo.toml
bdf-parser/benches/: parser.rs
bdf-parser/src/: glyph.rs  helpers.rs  lib.rs  metadata.rs  parser.rs  properties.rs
bdf-parser/tests/: 5x8.rs  a.bdf  a.rs  helpers.rs  tecate_suite.rs  u8g2_suite.rs
eg-bdf/: Cargo.toml
eg-bdf-examples/: Cargo.toml  build.rs
eg-bdf-examples/examples/: font_viewer.rs  hello.rs
eg-bdf-macros/: Cargo.toml
eg-bdf-macros/src/: lib.rs
eg-bdf/examples/: hello.rs
eg-bdf/src/: lib.rs  text.rs
eg-font-converter/: Cargo.toml
eg-font-converter/src/: eg_bdf_font.rs  lib.rs  main.rs  mono_font.rs
eg-font-converter/tests/: build.rs
eg-font-converter/tests/expected/: eg_bdf_az.rs  mono_font_10x20_iso8859_1.rs  mono_font_10x20_iso8859_15.rs  mono_font_6x10_ascii.rs  mono_font_6x10_az.data  mono_font_6x10_az.rs
embedded-bdf/: Cargo.toml
embedded-bdf-macros/: Cargo.toml
embedded-bdf-macros/src/: lib.rs
embedded-bdf/examples/: hello.rs
embedded-bdf/src/: lib.rs  text.rs
tools/: Cargo.toml
tools/test-bdf-parser/: Cargo.toml
tools/test-bdf-parser/src/: lib.rs  main.rs
tools/test-bdf-parser/tests/: helpers.rs  tecate_suite.rs  u8g2_suite.rs
