[workspace]

members = [
    "bdf-parser",
    "embedded-bdf",
    "embedded-bdf-macros",
]

[patch.crates-io]
embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics.git" }
embedded-graphics-simulator = { git = "https://github.com/embedded-graphics/simulator.git" }
tinytga = { git = "https://github.com/embedded-graphics/tinytga.git" }
tinybmp = { git = "https://github.com/embedded-graphics/tinybmp.git" }