[package]
name = "bdf-parser"
description = "BDF font parser"
version = "0.1.0"
edition = "2018"
authors = ["James Waples <james@wapl.es>", "Ralf Fuest <mail@rfuest.de>"]
repository = "https://github.com/embedded-graphics/bdf"
categories = ["parser-implementations"]
keywords = ["parser", "bdf", "font", "nom"]
license = "MIT OR Apache-2.0"

[dependencies]
bstr = "0.2.15"
nom = "6.1.2"
strum = { version = "0.20.0", features = ["derive"] }
thiserror = "1.0.24"

[dev-dependencies]
indoc = "1.0.3"
