[package]
name = "eg-bdf-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.7.0"
# TODO: add non path dependency
eg-bdf = { path = "../eg-bdf" }
eg-font-converter = { path = "../eg-font-converter" }
anyhow = "1.0.98"

[build-dependencies]
# TODO: add non path dependency
eg-font-converter = { path = "../eg-font-converter" }
