[package]
name = "eg-bdf-macros"
description = "Procedural macros for eg-bdf"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2018"
repository = "https://github.com/embedded-graphics/bdf"
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std"]
keywords = ["embedded-graphics", "font", "bdf"]

[lib]
proc-macro = true

[dependencies]
bdf-parser = { version= "0.1.0", path = "../bdf-parser" }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
embedded-graphics = "0.7.1"
