[package]
name = "eg-bdf"
description = "BDF text renderer for embedded-graphics"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2018"
repository = "https://github.com/embedded-graphics/bdf"
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std"]
keywords = ["embedded-graphics", "font", "bdf"]

[dependencies]
embedded-graphics = "0.7.0-alpha.3"
eg-bdf-macros = { version = "0.1.0", path = "../eg-bdf-macros" }

[dev-dependencies]
embedded-graphics-simulator = "0.3.0-alpha.2"
