[package]
name = "embedded-bdf"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2018"

[dependencies]
embedded-graphics = { git = "https://github.com/rfuest/embedded-graphics", branch = "core-text-style" }
embedded-bdf-macros = { path = "../embedded-bdf-macros" }

[dev-dependencies]
# TODO: change to non git dependency
embedded-graphics-simulator = { git = "https://github.com/embedded-graphics/simulator" }