[package]
name = "embedded-bdf"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2018"

[dependencies]
# TODO: change to non git dependency
embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics" }
embedded-bdf-macros = { path = "../embedded-bdf-macros" }

[dev-dependencies]
# TODO: change to non git dependency
embedded-graphics-simulator = { git = "https://github.com/embedded-graphics/simulator" }